Module-2 Homework-3 API
Использован отрефакторенный код создания сериализатора с практики.
Доработана спецификация для сущности трат (Expense)
Написаны тесты на DTO для запросов-ответов по картам и тратам.
