# fm-api-v1/src/commonMain/kotlin/local/learning/api/serialization/utils/card/strategy/IRequestStrategy.kt
@@ -1,17 +1,0 @@
-package local.learning.api.serialization.utils.card.strategy
-
-import local.learning.api.serialization.utils.IApiStrategy
-import local.learning.api.v1.models.IRequest
-
-sealed interface IRequestStrategy: IApiStrategy<IRequest> {
-    companion object {
-        private val members: List<IRequestStrategy> = listOf(
-            CreateRequestStrategy,
-            ReadRequestStrategy,
-            UpdateRequestStrategy,
-            DeleteRequestStrategy
-        )
-        val membersByDiscriminator = members.associateBy { it.discriminator }
-        val membersByClazz = members.associateBy { it.clazz }
-    }
-}
